<resources>
    <string name="app_name">Lab1</string>
    <string name="app_title">中山大学学生信息系统</string>
    <string name="app_zhanghao">账号:</string>
    <string name="app_mima">密码:</string>
    <string name="app_hint1">请输入账号</string>
    <string name="app_hint2">请输入密码</string>
    <string name="app_student">学生</string>
    <string name="app_faculty">教职工</string>
    <string name="app_register">注册</string>
    <string name="app_login">登录</string>
</resources>
