<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.lab1.MainActivity">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline"/>

    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/icon"
        android:src="@drawable/sysu"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="20dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline1"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/zh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/app_zhanghao"
        app:layout_constraintLeft_toLeftOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/username"
        app:layout_constraintBottom_toBottomOf="@+id/username"/>
        <!--app:layout_constraintTop_toTopOf="@id/username"-->
        <!--app:layout_constraintBottom_toBottomOf="@id/username"-->

    <TextView
        android:id="@+id/mm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/app_mima"
        app:layout_constraintLeft_toLeftOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/password"
        app:layout_constraintBottom_toBottomOf="@+id/password"/>
        <!--app:layout_constraintTop_toTopOf="@id/password"-->
        <!--app:layout_constraintBottom_toBottomOf="@id/password"-->
        <!--app:layout_constraintLeft_toLeftOf="@id/guideline1" />-->

    <EditText
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/app_hint1"
        android:textSize="18sp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/icon"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@id/zh"
        android:layout_marginLeft="20dp"/>
        <!--android:layout_marginTop="20dp"-->
        <!--app:layout_constraintLeft_toRightOf="@id/zh"-->
        <!--android:layout_marginLeft="20dp"-->
        <!--android:layout_marginStart="20dp"/>-->

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/app_hint2"
        android:textSize="18sp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@id/mm"
        android:layout_marginLeft="20dp"/>

    <RadioGroup
        android:id="@+id/bgroud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_student"
            android:textSize="18sp"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_faculty"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@id/button1"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>

    </RadioGroup>

    <!--<android.support.constraint.Guideline-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/guideline2"-->
        <!--android:orientation="vertical"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"/>-->

    <!--<Button-->
        <!--android:id="@+id/button3"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/app_login"-->
        <!--android:textSize="18sp"-->
        <!--android:background="@drawable/buttonstyle"-->
        <!--app:layout_constraintRight_toLeftOf="@id/guideline2"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:layout_marginEnd="10dp"-->
        <!--app:layout_constraintTop_toBottomOf="@id/bgroud"-->
        <!--android:layout_marginTop="20dp"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"/>-->

    <!--<Button-->
        <!--android:id="@+id/button4"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/app_register"-->
        <!--android:textSize="18sp"-->
        <!--android:background="@drawable/buttonstyle"-->
        <!--app:layout_constraintLeft_toRightOf="@id/button3"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginStart="10dp"-->
        <!--app:layout_constraintTop_toBottomOf="@id/bgroud"-->
        <!--android:layout_marginTop="20dp"-->
        <!--app:layout_constraintRight_toRightOf="parent"/>-->

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_login"
        android:textSize="18sp"
        android:background="@drawable/buttonstyle"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintRight_toLeftOf="@+id/button4"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/bgroud"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_register"
        android:textSize="18sp"
        android:background="@drawable/buttonstyle"
        app:layout_constraintLeft_toRightOf="@+id/button3"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/bgroud"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"/>






</android.support.constraint.ConstraintLayout>
